fix footer position with z-index

--- a/src/stylesheets/Footer.scss
+++ b/src/stylesheets/Footer.scss
@@ -1,5 +1,6 @@
 .page__footer {
     position: fixed;
+    z-index: 999;
     left: 0;
     bottom: 0;
     width: 100vw;
