--- a/src/stylesheets/Information.scss
+++ b/src/stylesheets/Information.scss
@@ -22,7 +22,7 @@
             height: 700px;
              }
             @media all and (min-width: 1200px) {
-            margin-top: 0;
+            margin-top: 1%;
             width: 800px;
             height: 800px;
 		}
@@ -38,7 +38,7 @@
             width: 250px;
             height: 150px;
             position: absolute;
-            z-index: 999;
+            z-index: 998;
             @media all and (min-width: 768px) {
             margin-top: 13%;
             width: 445px;
